[gd_scene load_steps=76 format=2]

[ext_resource path="res://src/character/little witch/Sprite sheet/IdleAnimation.png" type="Texture" id=1]
[ext_resource path="res://src/player/player.gd" type="Script" id=2]
[ext_resource path="res://src/character/little witch/Sprite sheet/AttackAnimation.png" type="Texture" id=3]
[ext_resource path="res://src/character/little witch/Sprite sheet/JumpAnimation.png" type="Texture" id=4]
[ext_resource path="res://src/character/little witch/Sprite sheet/RunAnimation.png" type="Texture" id=5]
[ext_resource path="res://src/character/little witch/Sprite sheet/DeathAnimation.png" type="Texture" id=6]
[ext_resource path="res://ui/GUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/jump2.mp3" type="AudioStream" id=8]
[ext_resource path="res://audio/GunShotSnglShotEx PE1097508.mp3" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 69, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 1 )
region = Rect2( 138, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 1 )
region = Rect2( 207, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 1 )
region = Rect2( 276, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 1 )
region = Rect2( 345, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 1 )
region = Rect2( 414, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 1 )
region = Rect2( 483, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 1 )
region = Rect2( 552, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 1 )
region = Rect2( 621, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 1 )
region = Rect2( 690, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 1 )
region = Rect2( 759, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 1 )
region = Rect2( 828, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 69, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 5 )
region = Rect2( 138, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 5 )
region = Rect2( 207, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 5 )
region = Rect2( 276, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 5 )
region = Rect2( 345, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 5 )
region = Rect2( 414, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 5 )
region = Rect2( 483, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 5 )
region = Rect2( 552, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 5 )
region = Rect2( 621, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 5 )
region = Rect2( 690, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 5 )
region = Rect2( 759, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 5 )
region = Rect2( 828, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 5 )
region = Rect2( 897, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 5 )
region = Rect2( 966, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 5 )
region = Rect2( 1035, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 3 )
region = Rect2( 69, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 138, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 207, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 276, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 345, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 3 )
region = Rect2( 414, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 3 )
region = Rect2( 483, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 3 )
region = Rect2( 552, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 3 )
region = Rect2( 621, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 69, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 138, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 4 )
region = Rect2( 207, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 4 )
region = Rect2( 276, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 4 )
region = Rect2( 345, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 4 )
region = Rect2( 414, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 4 )
region = Rect2( 483, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 4 )
region = Rect2( 552, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 621, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 4 )
region = Rect2( 690, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 4 )
region = Rect2( 759, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 828, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 897, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 966, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 69, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 138, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 207, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 276, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 345, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 414, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 483, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 552, 0, 69, 56 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 621, 0, 69, 56 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ) ],
"loop": true,
"name": "run",
"speed": 25.0
}, {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ) ],
"loop": false,
"name": "shoot",
"speed": 35.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": false,
"name": "fall",
"speed": 12.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": false,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 4.306, 10 )

[node name="player" type="KinematicBody2D" groups=["players"]]
collision_mask = 11
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -6 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 14 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 33 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GUI" parent="." instance=ExtResource( 7 )]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -25
limit_top = -175
limit_right = 775
limit_bottom = 220
limit_smoothed = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="jumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="shootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
